// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepperField should render correctly 1`] = `
<DocumentFragment>
  .cache-sxbkfh-StyledContainer {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-h78v76-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-h78v76-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-h78v76-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-4fk8vx-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-16wi5tr-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-16wi5tr-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-16wi5tr-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-16wi5tr-StyledTouchable-StyledTouchable>.etyrq8m5 {
  fill: #4f0599;
}

.cache-16wi5tr-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<form
    novalidate=""
  >
    <div
      class="etyrq8m0 cache-sxbkfh-StyledContainer"
    >
      <button
        aria-disabled="true"
        aria-label="Minus"
        class="etyrq8m4 e1kgqxfn0 cache-1uvvtky-StyledTouchable-StyledTouchable"
        disabled=""
        type="button"
      >
        <svg
          class="etyrq8m5 etwatq50 cache-wo41ov-StyledIcon-sizeStyles-StyledIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,13H5V11H19V13Z"
          />
        </svg>
      </button>
      <div
        aria-live="assertive"
        class="cache-h78v76-StyledCenterBox etyrq8m3"
        role="status"
      >
        <input
          aria-label="Input"
          class="cache-4fk8vx-StyledInput etyrq8m2"
          name="test"
          style="width: 25px;"
          value="0"
        />
      </div>
      <button
        aria-disabled="false"
        aria-label="Plus"
        class="etyrq8m4 e1kgqxfn0 cache-16wi5tr-StyledTouchable-StyledTouchable"
        type="button"
      >
        <svg
          class="etyrq8m5 etwatq50 cache-nqz10n-StyledIcon-sizeStyles-StyledIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
          />
        </svg>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`StepperField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-8wjnjo-StyledContainer-StyledContainer {
  background-color: #f6f5f7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-8wjnjo-StyledContainer-StyledContainer>.etyrq8m4,
.cache-8wjnjo-StyledContainer-StyledContainer .etyrq8m2,
.cache-8wjnjo-StyledContainer-StyledContainer .etyrq8m3 {
  background-color: #f6f5f7;
  border: none;
  color: #b2b6c3;
  opacity: 1;
  cursor: not-allowed;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-h78v76-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-h78v76-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-h78v76-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-4fk8vx-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<form
    novalidate=""
  >
    <div
      class="etyrq8m0 cache-8wjnjo-StyledContainer-StyledContainer"
      disabled=""
    >
      <button
        aria-disabled="true"
        aria-label="Minus"
        class="etyrq8m4 e1kgqxfn0 cache-1uvvtky-StyledTouchable-StyledTouchable"
        disabled=""
        type="button"
      >
        <svg
          class="etyrq8m5 etwatq50 cache-wo41ov-StyledIcon-sizeStyles-StyledIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,13H5V11H19V13Z"
          />
        </svg>
      </button>
      <div
        aria-live="assertive"
        class="cache-h78v76-StyledCenterBox etyrq8m3"
        role="status"
      >
        <input
          aria-label="Input"
          class="cache-4fk8vx-StyledInput etyrq8m2"
          disabled=""
          name="test"
          style="width: 25px;"
          value="0"
        />
      </div>
      <button
        aria-disabled="true"
        aria-label="Plus"
        class="etyrq8m4 e1kgqxfn0 cache-1uvvtky-StyledTouchable-StyledTouchable"
        disabled=""
        type="button"
      >
        <svg
          class="etyrq8m5 etwatq50 cache-nqz10n-StyledIcon-sizeStyles-StyledIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
          />
        </svg>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`StepperField should trigger event onMinCrossed & onMaxCrossed 1`] = `
<DocumentFragment>
  .cache-sxbkfh-StyledContainer {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-16wi5tr-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-16wi5tr-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-16wi5tr-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-16wi5tr-StyledTouchable-StyledTouchable>.etyrq8m5 {
  fill: #4f0599;
}

.cache-16wi5tr-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-h78v76-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-h78v76-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-h78v76-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-4fk8vx-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<form
    novalidate=""
  >
    <div
      class="etyrq8m0 cache-sxbkfh-StyledContainer"
    >
      <button
        aria-disabled="false"
        aria-label="Minus"
        class="etyrq8m4 e1kgqxfn0 cache-16wi5tr-StyledTouchable-StyledTouchable"
        type="button"
      >
        <svg
          class="etyrq8m5 etwatq50 cache-wo41ov-StyledIcon-sizeStyles-StyledIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,13H5V11H19V13Z"
          />
        </svg>
      </button>
      <div
        aria-live="assertive"
        class="cache-h78v76-StyledCenterBox etyrq8m3"
        role="status"
      >
        <input
          aria-label="Input"
          class="cache-4fk8vx-StyledInput etyrq8m2"
          name="test"
          style="width: 35px;"
          type="text"
          value="20"
        />
      </div>
      <button
        aria-disabled="true"
        aria-label="Plus"
        class="etyrq8m4 e1kgqxfn0 cache-1uvvtky-StyledTouchable-StyledTouchable"
        disabled=""
        type="button"
      >
        <svg
          class="etyrq8m5 etwatq50 cache-nqz10n-StyledIcon-sizeStyles-StyledIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
          />
        </svg>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`StepperField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-sxbkfh-StyledContainer {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-h78v76-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-h78v76-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-h78v76-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-4fk8vx-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-16wi5tr-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-16wi5tr-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-16wi5tr-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-16wi5tr-StyledTouchable-StyledTouchable>.etyrq8m5 {
  fill: #4f0599;
}

.cache-16wi5tr-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<form
    novalidate=""
  >
    <div
      class="etyrq8m0 cache-sxbkfh-StyledContainer"
    >
      <button
        aria-disabled="true"
        aria-label="Minus"
        class="etyrq8m4 e1kgqxfn0 cache-1uvvtky-StyledTouchable-StyledTouchable"
        disabled=""
        type="button"
      >
        <svg
          class="etyrq8m5 etwatq50 cache-wo41ov-StyledIcon-sizeStyles-StyledIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,13H5V11H19V13Z"
          />
        </svg>
      </button>
      <div
        aria-live="assertive"
        class="cache-h78v76-StyledCenterBox etyrq8m3"
        role="status"
      >
        <input
          aria-label="Input"
          class="cache-4fk8vx-StyledInput etyrq8m2"
          name="test"
          style="width: 25px;"
          value="0"
        />
      </div>
      <button
        aria-disabled="false"
        aria-label="Plus"
        class="etyrq8m4 e1kgqxfn0 cache-16wi5tr-StyledTouchable-StyledTouchable"
        type="button"
      >
        <svg
          class="etyrq8m5 etwatq50 cache-nqz10n-StyledIcon-sizeStyles-StyledIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
          />
        </svg>
      </button>
    </div>
  </form>
</DocumentFragment>
`;
